--- a/praktikum/tugas6/latihan6a/css/oke.css
+++ b/praktikum/tugas6/latihan6a/css/oke.css
@@ -5,7 +5,11 @@ tr {
     width: 50%;
 }
 table, tr, td, th, thead {
-    border: 1px solid rgb(144, 179, 211);
+    border: 1px solid rgb(108, 160, 238);
+}
+body{
+
+    background-color: rgb(252, 221, 141);
 }
 .h1 {
     color: aliceblue;
